--- a/roles/auto_ssh/tasks/main.yml
+++ b/roles/auto_ssh/tasks/main.yml
@@ -78,7 +78,7 @@
 - name: Ensure host keys are in known_hosts
   ansible.builtin.blockinfile:
     path: "{{ ssh_known_hosts_file }}"
-    marker: "# {mark} auto-ssh {{ ssh_key_comment }}"
+    marker: "# {mark} {{ ssh_hosts_comment }}"
     create: true
     mode: 0644
     block: |
@@ -89,7 +89,7 @@
 - name: Add target host names to /etc/hosts
   ansible.builtin.blockinfile:
     path: /etc/hosts
-    marker: "# {mark} auto-ssh {{ ssh_key_comment }}"
+    marker: "# {mark} {{ ssh_hosts_comment }}"
     block: |
       {% for h in ssh_dest_hosts %}
       {{ hostvars[h].ansible_host }} {{ hostvars[h].ssh_conf_hosts_names | default(hostvars[h].__target_host_names | difference([hostvars[h].ansible_host])) | unique | join(' ') }}
