[borg] Rename remote-ratelimit to upload-ratelimit

--- a/group_vars/backup/borg.yml
+++ b/group_vars/backup/borg.yml
@@ -47,7 +47,7 @@ borg_backups:
       - "--compression auto,zstd"
       - "--exclude-caches"
       - "--exclude '**/.snapshots'"
-      - "--remote-ratelimit 20000"
+      - "--upload-ratelimit 20000"
     prune_args:
       - "--list"
       - "--show-rc"
