--- a/playbooks/rpi.yml
+++ b/playbooks/rpi.yml
@@ -117,6 +117,12 @@
         - postfix_main_config | length > 0
       tags: ["postfix"]
 
+    - role: postfix_exporter
+      when:
+        - postfix_main_config is defined
+        - postfix_main_config | length > 0
+      tags: ["postfix_exporter"]
+
     - role: wireguard
       when:
         - wireguard_address is defined
