Add more vars to auto_ssh

--- a/roles/auto_ssh/defaults/main.yml
+++ b/roles/auto_ssh/defaults/main.yml
@@ -14,6 +14,8 @@ ssh_dest_dir: "/root/.ssh"
 ssh_dest_user: "root"
 ssh_dest_group: "{{ ssh_dest_user }}"
 ssh_dest_hosts: []
+ssh_dest_authorized_keys_name: "authorized_keys"
+ssh_dest_create_dir: true
 
 ssh_conf_hosts: false
 ssh_known_hosts_file: "{{ ssh_src_dir }}/known_hosts"
