[auto_ssh] Add ssh_key_config and ssh_known_hosts_config

--- a/roles/auto_ssh/defaults/main.yml
+++ b/roles/auto_ssh/defaults/main.yml
@@ -4,6 +4,7 @@ ssh_key_type: ed25519
 ssh_key_comment: "{{ ssh_src_user }}@{{ inventory_hostname }}"
 ssh_hosts_comment: "auto-ssh {{ ssh_key_comment }}"
 ssh_key_options: ""
+ssh_key_config: true
 
 
 ssh_src_dir: "/root/.ssh"
@@ -19,3 +20,4 @@ ssh_dest_create_dir: true
 
 ssh_conf_hosts: false
 ssh_known_hosts_file: "{{ ssh_src_dir }}/known_hosts"
+ssh_known_hosts_config: true
