--- a/host_vars/theia/borg.yml
+++ b/host_vars/theia/borg.yml
@@ -5,7 +5,7 @@ borg_syno_tank_passphrase: "{{ vault_borg_syno_tank_passphrase }}"
 __borg_btrfs_snaps:
   tank:
     snap_src: "/mnt/tank"
-    snap_dir: ".snapshots/borg_tmp"
+    snap_dir: ".snapshots/borg_tmp.$(date +%Y%m%dT%H%M)"
     snap_subvols:
       - "archive"
       - "backup"
