Move remote tank backup to theia

--- a/host_vars/romsto/borg.yml
+++ b/host_vars/romsto/borg.yml
@@ -2,4 +2,6 @@
 
 borg_user: "andrei"
 borg_pool: "/mnt/user/backup/borg"
-borg_remote_repo: "ssh://{{ borg_user }}@{{ wireguard_ip }}{{ borg_pool }}"
+
+borg_ssh_check: "{{ borg_user }}@{{ wireguard_ip }}"
+borg_remote_repo: "ssh://{{ borg_ssh_check }}{{ borg_pool }}"
