Rework Prometheus targets config
Move targets and labels to group and host vars.

--- a/group_vars/all/node_exporter.yml
+++ b/group_vars/all/node_exporter.yml
@@ -7,3 +7,7 @@ node_exporter_no_collectors:
   - xfs
   - bcache
   - textfile
+
+node_exporter_config_firewall: "{{ firewall_enabled | default(true) }}"
+node_exporter_allow_ips: "{{ groups['prom'] | difference(groups['webgw']) | map('extract', hostvars, 'ansible_host') | list }}"
+node_exporter_port: 9100
