--- a/host_vars/webgw01/vars.yml
+++ b/host_vars/webgw01/vars.yml
@@ -15,3 +15,7 @@ promtail_syslog_port: ""
 pushgateway_port: ""
 webgw_ports: []
 provisioned_disks: []
+
+prometheus_blackbox_icmp_targets:
+  - "{{ ansible_host }}"
+  - "{{ wireguard_ip }}"
