--- a/group_vars/all/vars.yml
+++ b/group_vars/all/vars.yml
@@ -12,8 +12,6 @@ my_groups:
   - wheel
 my_email: "{{ vault_my_email }}"
 
-node_exporter_port: 9100
-
 locale_gen:
   - "en_US.UTF-8"
   - "en_GB.UTF-8"
@@ -27,5 +25,7 @@ systemd_script_install_path: "/usr/local/bin/systemd"
 
 s3_url: "https://s3.{{ domains['hb'] }}"
 
-node_exporter_config_firewall: "{{ firewall_enabled | default(true) }}"
-node_exporter_allow_ips: "{{ groups['prom'] | difference(groups['webgw']) | map('extract', hostvars, 'ansible_host') | list }}"
+prometheus_blackbox_icmp_targets: ["{{ wireguard_ip | default(ansible_host) }}"]
+prometheus_node_targets: ["{{ wireguard_ip | default(ansible_host) + ':' + node_exporter_port | string }}"]
+prometheus_node_labels:
+  instance: "{{ inventory_hostname }}"
