--- a/group_vars/webgw/vars.yml
+++ b/group_vars/webgw/vars.yml
@@ -7,3 +7,5 @@ domain: "{{ domains['hb'] }}"
 __f2b_extra_ignore:
   - "127.0.0.1/8"
   - "::1"
+
+prometheus_nginx_targets: ["{{ wireguard_ip | default(ansible_host) + ':' + nginx_exporter_port | string }}"]
